--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "v11",
-  "version": "11.0.0",
-  "description": "Adding Flash messages. UI improvements",
+  "name": "LetsCamp",
+  "version": "1.0.0",
+  "description": "Simple CRUD Application",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
